added templates extension

--- a/core/templates/authors.html
+++ b/core/templates/authors.html
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href = "{% url 'authors' %}">Auhors</a>
-    <a href = "{% url 'articles' %}">Articles</a>
+{% extends 'base.html' %}
 
-    <h1>Authors</h1>
+{% block content %}
+    <h1>Авторы</h1>
     <ol>
     {% for author in authors %}
         <li>{{ author.nickname }}</li>
     {% endfor %}
     </ol>
-</body>
-</html>
+{% endblock %}
