--- a/core/templates/articles.html
+++ b/core/templates/articles.html
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href = "{% url 'authors' %}">Auhors</a>
-    <a href = "{% url 'articles' %}">Articles</a>
+{% extends 'base.html' %}
 
-    <h1>Articles</h1>
+{% block content %}
+    <h1>Статьи</h1>
     <ol>
     {% for article in articles %}
         <a href = "{% url 'article' article.id %}"><li>{{ article.title }}</li></a>
     {% endfor %}
     </ol>
-</body>
-</html>
+{% endblock %}
