--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    О сайте
+{% endblock %}
+
 {% block content %}
     <h2>О нас</h2>
-    <div>На Хабре мы предоставляем новейшую информацию связанную с миром IT.
+    {% block text %}
+    <div>
+        На Хабре мы предоставляем новейшую информацию связанную с миром IT.
     </div>
+    {% endblock %}
 {% endblock %}
