added views, created date, edited date

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     О сайте
+{% endblock %}
+
+{% block extra-script %}
+    <script src="{% static 'myscript.js' %}"></script>
 {% endblock %}
 
 {% block content %}
