editing was added

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -16,4 +16,6 @@
         На Хабре мы предоставляем новейшую информацию связанную с миром IT.
     </div>
     {% endblock %}
+
+    <button>Перекрасить</button>
 {% endblock %}
