--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -18,8 +18,11 @@
 <body>
     <a href = "{% url 'authors' %}">Авторы</a> |
     <a href = "{% url 'articles' %}">Статьи</a> |
+    <a href = "{% url 'article-add' %}">Добавить</a> |
     <a href = "#">Топ-10</a> |
     <a href = "{% url 'about' %}">О сайте</a>
+    -----------------------
+    <span>Привет, {{ request.user.username }}</span>
 
     {% block content %}
     {% endblock %}
