deleting and hiding was added

--- a/core/templates/article.html
+++ b/core/templates/article.html
@@ -19,4 +19,8 @@
         </ul>
     </p>
     <a href="{% url 'article-edit' article.id %}">Редактировать</a>
+    <br>
+    <a href="{% url 'article-delete' article.id %}">Удалить</a>
+    <br>
+    <a href="{% url 'article-hide' article.id %}">Скрыть</a>
 {% endblock %}
